--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ nav,h1,h2,h3,h4,h5{
   padding: 10px;
   text-align: center;
 }
-#container img {
+.banner-container img {
   width: 100%;
   height: auto;
 }
