--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ nav,h1,h2,h3,h4,h5{
   padding: 10px;
 }
 
-.footer {
+footer {
   background-color: #f1f1f1;
   padding: 10px;
   text-align: center;
