not using stencil font in header

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@
     width:100%;
 }
 
-#main-nav a{color: black;font-family: "Glaser Stencil D Regular"; text-decoration: none;}
+#main-nav a{color: black; text-decoration: none;}
 
 body {
   font-family:"Studio Sans Regular";
