--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ a {
 }
 
 .logo {
-    max-height: 40px;
+    max-height: 60px;
     position: fixed;
     opacity: 0.8;
     top: 5px;
@@ -85,7 +85,7 @@ a {
     position: absolute;
     top: 0;
     left: 0;
-    background: rgba(255,255,255,0.87);
+    background: rgba(255,255,255,0);
     place-items: center;
     display: flex;
     justify-content: space-evenly;
@@ -117,7 +117,7 @@ section {text-align: center;}
 .header-banner{
    height:30vh;
 background-image:url('/media/banners/KOR_Web_banner-07.png');
-background-size:cover;
+background-size:100px;
 background-position:center;
 }
 
