--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,45 @@ footer {
     width: 100%;
     height: auto;
 }
+.slider .banner-container {
+    display: none;
+    animation: reveal .5s ease-in-out;
+}
+
+.slider .banner-container.active {
+    display: block;
+    }
+
+.slider .dots {
+    text-align: center;
+    padding: 10px;
+}
+
+.slider .dots li {
+    cursor: pointer;
+    display: inline-block;
+    background: #333;
+    color: #fff;
+    padding: 7px 11px;
+    line-height: .5;
+    border-radius: 50%;
+    text-indent: -9999px;
+    opacity: .5;
+    -webkit-transition: opacity .2s;
+    -o-transition: opacity .2s;
+    transition: opacity .2s;
+}
+
+.slider .dots li.active {
+    opacity: 1;
+}
+
+@keyframes reveal {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
