--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,11 @@ a {
     color: black;
 }
 
+div#body-container {
+    margin: 0px auto;
+    max-width: 750px;
+}
+
 #main-nav {
     position: absolute;
     top: 0;
@@ -103,7 +108,7 @@ a {
 body {
     font-family: "Studio Sans Regular";
     font-size: 18px;
-    background-color: #000000f0;
+    background-color: black;
     color: white;
 }
 
@@ -133,19 +138,20 @@ h1,h3 {
 }
 
 nav,h2,h4,h5 {
-    font-family: "Studio Sans Bold", Helvetica, sans-serif;
+    /* font-family: "Studio Sans Bold", Helvetica, sans-serif; */
 }
 
 .row {
-    display: -webkit-flex;
+    place-items: center;
     display: flex;
+    justify-content: space-evenly;
+    flex-flow: row wrap;
 }
 
 .column {
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    padding: 10px;
+    width: 30%;
+    min-width: 240px;
+    padding: 5px;
 }
 
 footer {
@@ -191,9 +197,9 @@ footer {
     opacity: 1;
 }
 
-#slide-loader{
-    height:10px;
-    background-color:#00ff97;
+#slide-loader {
+    height: 10px;
+    background-color: #00ff97;
 }
 
 @keyframes reveal {
