wheel visible against black background

--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,11 @@ a {
 .logo {
     max-height: 100px;
     position: fixed;
-    opacity: 0.5;
+    filter: invert(1);
+    opacity: 0.6;
     top: 5px;
     left: 10;
-    transition: 0.01s ease-in-out;
+    z-index: -9;
 }
 
 .title-text {
