--- a/css/style.css
+++ b/css/style.css
@@ -56,17 +56,22 @@
 }
 
 a {
-    color: blue;
+    color: #ff005e;
+}
+
+hr{
+    border: 1px solid #2e5087;
 }
 
 .logo {
     max-height: 100px;
     position: fixed;
-    filter: invert(1);
-    opacity: 0.6;
+    /* filter: invert(1); */
+    opacity: 1;
     top: 5px;
     left: 10;
     z-index: -9;
+    background: #2e5087;
 }
 
 .title-text {
@@ -183,7 +188,7 @@ footer {
 .slider .dots li {
     cursor: pointer;
     display: inline-block;
-    background: #333;
+    background: #2e5087;
     color: #fff;
     padding: 7px 11px;
     line-height: .5;
@@ -201,7 +206,7 @@ footer {
 
 #slide-loader {
     height: 10px;
-    background-color: #00ff97;
+    background-color: #2e5087;
 }
 
 @keyframes reveal {
@@ -231,11 +236,12 @@ footer {
 
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 10px auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
     color: black;
+    text-align:left;
 }
 
 .close {
